--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/overpass-mono": "^5.0.16",
     "@fontsource-variable/quicksand": "^5.0.16",
     "astro": "^4.0.8",
     "tailwindcss": "^3.4.0",
